--- a/views/layout_head.html.erb
+++ b/views/layout_head.html.erb
@@ -1,2 +1,3 @@
+<%= favicon_link_tag "#{@base_url}/assets/favicon.ico" %>
 <%= stylesheet_link_tag "#{@base_url}/assets/uh-webfonts.css" %>
 <%= stylesheet_link_tag "#{@base_url}/assets/uh.css" %>
