Update file locations

--- a/views/shared/_header.html.erb
+++ b/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="header-links">
       <div class="content">
         <div class="uhlib-logo">
-          <%= link_to image_tag("#{@base_url}/assets/secondary-logo.svg", 
+          <%= link_to image_tag("#{@base_url}/assets/images/secondary-logo.svg", 
                         :alt => "University of Houston Libraries logo",
                         :title => "University of Houston Libraries"),
                 "https://libraries.uh.edu",
