Update navigation responsive menu button

--- a/public/assets/stylesheets/uh.css
+++ b/public/assets/stylesheets/uh.css
@@ -381,6 +381,25 @@ h3 {
   text-decoration: none;
 }
 
+#navigation>nav>div>button>.navbar-toggle-hamburger {
+  float: left;
+}
+
+#navigation>nav>div>button>.navbar-text.visible-xs-inline-block {
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 5px;
+  vertical-align: top;
+  font-size: 14px;
+  line-height: 14px;
+  float: left;
+}
+
+.navbar-default .navbar-text {
+  color: #fff9d9;
+  color: var(--cream);
+}
+
 /* FOOTER */
 .footer {
   margin-top: 30px;
