--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -1,3 +1,13 @@
 <%= favicon_link_tag "#{@base_url}/assets/favicon.ico" %>
 <%= stylesheet_link_tag "#{@base_url}/assets/stylesheets/uh-webfonts.css" %>
 <%= stylesheet_link_tag "#{@base_url}/assets/stylesheets/uh.css" %>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-6552120-10"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-6552120-10');
+</script>
