--- a/public/views/shared/_footer.html.erb
+++ b/public/views/shared/_footer.html.erb
@@ -18,7 +18,7 @@
           <ul class="nav-required">
             <li class="nav-item-highlighted"><a href="https://libraries.uh.edu/contact/feedback">Report a problem with this page</a></li>
             <li><a href="http://www.texas.gov/">Texas.gov</a></li>
-            <li><a href="https://www.dhs.gov/geography/texas">Texas Homeland Security</a></li>
+            <li><a href="https://gov.texas.gov/organization/hsgd">Texas Homeland Security</a></li>
             <li><a href="https://www.tsl.texas.gov/trail/index.html">TRAIL</a></li>
             <li><a href="https://sao.fraud.texas.gov/">Fraud Reporting</a></li>
             <li><a href="http://www.sos.state.tx.us/linkpolicy.shtml">Linking Notice</a></li>
