--- a/public/views/shared/_footer.html.erb
+++ b/public/views/shared/_footer.html.erb
@@ -8,6 +8,7 @@
               <li><a href="https://libraries.uh.edu/contact/feedback" title="Give Us Feedback">Give Us Feedback</a></li>
               <li><a href="https://libraries.uh.edu/contact" title="Employment">Contact Us</a></li>
               <li><a href="https://libraries.uh.edu/policies/privacy" title="Privacy Policy">Privacy Policy</a></li>
+              <li><a href="<%= AppConfig[:frontend_proxy_url] %>">Staff Interface</a></li>
               <li><a href="http://archivesspace.org/" title="Powered by ArchivesSpace">ArchivesSpace <%= ASConstants.VERSION %></a></li>
             </ul>
           </div>
