--- a/public/views/shared/_header.html.erb
+++ b/public/views/shared/_header.html.erb
@@ -38,7 +38,7 @@
     </div>
     <div class="site-name">
       <div class="content">
-        <h1><%= link_to "Finding Aids", root_path, :title => "University of Libraries Finding Aids" %></h1>
+        <h1><%= link_to "Archives and Finding Aids", root_path, :title => "University of Libraries Finding Aids" %></h1>
       </div>
     </div>
   </div>
