Update welcome text

--- a/public/views/welcome/show.html.erb
+++ b/public/views/welcome/show.html.erb
@@ -27,11 +27,11 @@
 <div class="row welcome-text">
   <div class="col-sm-6">
     <h3>About this site</h3>
-    <p>University of Houston Libraries Special Collections preserves and provides access to archival materials with a focus on Houston and Texas history in a range of topical collecting areas. The finding aids on this site describe the creators, context, and contents of our archival collections, helping you discover materials in our collections for research and teaching. Search or browse collections to get started.</p>
+    <p><a href="https://libraries.uh.edu/branches/special-collections/" title="visit Special Collection">University of Houston Libraries Special Collections</a> preserves and provides access to archival materials with a focus on Houston and Texas history in a range of topical <a href="http://findingaids.lib.uh.edu/classifications" title="view collecting areas">collecting areas</a>. The finding aids on this site describe the creators, context, and contents of our archival collections, helping you discover materials in our collections for research and teaching. Search or browse collections to get started.</p>
   </div>
   <div class="col-sm-6">
     <h3>Visiting Special Collections</h3>
-    <p>The Special Collections reading room is open to the general public from 9 a.m. to 5 p.m., Monday through Friday, and on Saturdays during the fall and spring semesters from noon to 4 p.m. More information on Visiting Special Collections is available on our <a href="https://libraries.uh.edu/branches/special-collections/" title="Special Collections website">website</a>.
-    Collections are non-circulating and must be used in the reading room. We’re happy to pull materials and have them ready upon your arrival -- just contact us using the request button found on each finding aid. Some finding aids contain digitized versions of collection materials, but in most cases viewing a collection in its entirety will require visiting the reading room.</p>
+    <p>The Special Collections reading room is open to the general public from 9 a.m. to 5 p.m., Monday through Friday, and on Saturdays during the fall and spring semesters from noon to 4 p.m. More information on <a href="https://libraries.uh.edu/branches/special-collections/visit/" title="Special Collections website">Visiting Special Collections</a> is available on our website.</p>
+    <p>Collections are non-circulating and must be used in the reading room. We’re happy to pull materials and have them ready upon your arrival -- just contact us using the request button found on each finding aid. Some finding aids contain digitized versions of collection materials, but in most cases viewing a collection in its entirety will require visiting the reading room.</p>
   </div>
 </div>
