--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -1,6 +1,6 @@
 <%= favicon_link_tag "#{@base_url}/assets/favicon.ico" %>
-<%= stylesheet_link_tag "#{@base_url}/assets/stylesheets/uh-webfonts.css" %>
-<%= stylesheet_link_tag "#{@base_url}/assets/stylesheets/uh.css" %>
+<%= stylesheet_link_tag "#{@base_url}/assets/stylesheets/uh-webfonts.css", media: "all" %>
+<%= stylesheet_link_tag "#{@base_url}/assets/stylesheets/uh.css", media: "all" %>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6552120-10"></script>
