--- a/public/assets/stylesheets/uh.css
+++ b/public/assets/stylesheets/uh.css
@@ -405,6 +405,15 @@ h3 {
   color: var(--cream);
 }
 
+/* RESULTS DISPLAY */
+.result_context {
+  padding-top: 0px;
+}
+
+.abstract.single_note {
+ padding-top: 10px;
+}
+
 /* FOOTER */
 .footer {
   margin-top: 30px;
